fix <pre> wrap

--- a/src/pages/User/InfoBook/InfoBook.css
+++ b/src/pages/User/InfoBook/InfoBook.css
@@ -134,6 +134,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
     font-size:18px;
+    white-space: pre-wrap;
 }
 .container_info_book_body_description_left_list_genre{
     height: auto;
